# pat_terminal

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile
src/pat_interfaces/: CMakeLists.txt  package.xml
src/pat_interfaces/msg/: AxisCommand.msg  AxisState.msg  ModeState.msg  PositionError.msg
src/pat_interfaces/srv/: SetBearing.srv  SetMode.srv
src/pat_terminal/: CMakeLists.txt  package.xml
src/pat_terminal/include/pat_terminal/: estimator.hpp  low_pass.hpp  mode_logic.hpp  pi_controller.hpp
src/pat_terminal/src/: coarse_controller.cpp  fine_controller.cpp  mode_manager.cpp
src/pat_terminal/test/: test_estimator.cpp  test_low_pass.cpp  test_mode_logic.cpp  test_pi_controller.cpp
src/plant_sim/: CMakeLists.txt  package.xml
src/plant_sim/include/plant_sim/: actuator.hpp  disturbance.hpp
src/plant_sim/launch/: simulation_launch.py
src/plant_sim/scripts/: plot_run.py
src/plant_sim/src/: plant_sim_node.cpp
src/plant_sim/test/: test_actuator.cpp  test_disturbance.cpp  test_integration.py
